tests/errors/empty_tag.error
parse error at line 1 column 9 for CrLf:
command []
        ^